k8s/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: demo-backend
  template:
    metadata:
      labels:
        app: demo-backend
    spec:
      containers:
      - name: backend
        image: test-backend:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: demo-backend
spec:
  selector:
    app: demo-backend
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
